--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,77 @@
-# .gitignore for Node.js + React (Vite)
+# .gitignore — Node.js + React (Vite) comprehensive
 
 # Dependencies
 node_modules/
 
-# Build output
+# Build artifacts (Vite)
 dist/
+.vite/
+node_modules/.vite/
 
-# Local env files
+# Environment files
 .env
 .env.local
 .env.*.local
 
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Editor directories and files
+# Process/lock files
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Editor settings
 .vscode/
 .idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw*
+*.sw?
 
-# OS-generated files
+# OS cruft
 .DS_Store
 Thumbs.db
 
-# Optional caches
+# Caches
 .cache/
 .eslintcache
+.parcel-cache/
+.turbo/
 
-# Coverage directory
+# Testing/coverage
 coverage/
+cypress/videos/
+cypress/screenshots/
+playwright-report/
+test-results/
+
+# Storybook
+storybook-static/
+
+# Package manager stores
+.pnpm-store/
+.npm/
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
+# Deploy & framework outputs (harmless if unused)
+.vercel/
+.next/
+out/
 
 # Misc
 *.tgz
 temp/
+.tmp/
